:up: Use new updater